--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/popcorn-official/popcorn-api.git"
   }
 }
