added Node version to package.json and README.md

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "scripts": {
     "start": "node --harmony --harmony_destructuring --use_strict index.js"
   },
+  "engines": { "node" : ">=4.0.0" },
   "main": "index.js",
   "repository": {
     "type": "git",
