--- a/package.json
+++ b/package.json
@@ -11,13 +11,12 @@
     "express": "^4.13.4",
     "mongoose": "^4.4.4",
     "morgan": "^1.7.0",
-    "q": "^1.4.1",
     "request": "^2.69.0",
     "response-time": "^2.3.1"
   },
   "license": "GPL-3.0",
   "scripts": {
-    "start": "node --harmony --harmony_destructuring --use_strict index.js"
+    "start": "node --harmony --harmony_destructuring --harmony_default_parameters --use_strict index.js"
   },
   "engines": { "node" : ">=4.0.0" },
   "main": "index.js",
