--- a/package.json
+++ b/package.json
@@ -1,25 +1,60 @@
 {
   "name": "popcorn-api",
-  "version": "1.1.0",
+  "version": "2.0.0",
   "description": "Popcorn Time API is developed to make it easier for anyone to create their own version of Popcorn Time.",
   "dependencies": {
     "async-q": "^0.3.1",
+    "babel-runtime": "^6.9.0",
     "body-parser": "^1.15.0",
+    "bytes": "^2.3.0",
     "cheerio": "^0.20.0",
+    "commander": "^2.9.0",
     "compression": "^1.6.1",
     "cron": "^1.1.0",
     "express": "^4.13.4",
+    "express-winston": "^1.3.1",
+    "eztv-api-pt": "^1.0.4",
+    "kat-api-pt": "^1.0.7",
     "mongoose": "^4.4.4",
-    "morgan": "^1.7.0",
+    "parse-torrent": "^5.7.3",
+    "prompt": "^1.0.0",
     "request": "^2.69.0",
-    "response-time": "^2.3.1"
+    "response-time": "^2.3.1",
+    "sprintf": "^0.1.5",
+    "torrent-tracker-health": "^1.0.0",
+    "trakt.tv": "^1.4.2",
+    "winston": "^2.2.0"
   },
-  "license": "GPL-3.0",
+  "devDependencies": {
+    "babel-cli": "^6.8.0",
+    "babel-plugin-transform-async-to-generator": "^6.8.0",
+    "babel-plugin-transform-runtime": "^6.9.0",
+    "babel-plugin-transform-strict-mode": "^6.8.0",
+    "babel-preset-es2015": "^6.6.0",
+    "del": "^2.2.0",
+    "docdash": "^0.3.0",
+    "forever": "^0.15.1",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "jsdoc": "^3.4.0",
+    "jsdoc-babel": "^0.1.0"
+  },
+  "license": "MIT",
   "scripts": {
-    "start": "node --harmony --harmony_destructuring --harmony_default_parameters --use_strict index.js"
+    "start": "node ./build/popcorn-api.js --run",
+    "start-dev": "./node_modules/.bin/babel-node ./src/popcorn-api.js --run",
+    "server": "node ./build/popcorn-api.js --server",
+    "server-dev": "./node_modules/.bin/babel-node ./src/popcorn-api.js --server",
+    "forever": "./node_modules/.bin/forever start ./build/popcorn-api.js --run",
+    "docs": "./node_modules/.bin/jsdoc --configure .jsdoc.json"
   },
-  "engines": { "node" : ">=5.0.0" },
-  "main": "index.js",
+  "bin": {
+    "popcorn-api": "./build/popcorn-api.js"
+  },
+  "engines": {
+    "node": ">=5.0.0"
+  },
+  "main": "./build/popcorn-api.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/popcorn-official/popcorn-api.git"
