--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "express": "~4.14.0",
     "express-winston": "~1.4.2",
     "eztv-api-pt": "~1.0.5",
+    "hummingbird-api": "^1.0.5",
     "kat-api-pt": "~1.0.8",
     "mongoose": "~4.5.3",
     "parse-torrent": "~5.8.0",
     "prompt": "~1.0.0",
-    "request": "~2.72.0",
+    "request": "~2.73.0",
     "response-time": "~2.3.1",
     "sprintf": "~0.1.5",
     "torrent-tracker-health": "~1.0.0",
