--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "hummingbird-api": "^1.0.5",
     "kat-api-pt": "~1.0.8",
     "mongoose": "~4.5.3",
+    "nyaa-api-pt": "^1.0.0",
     "parse-torrent": "~5.8.0",
     "prompt": "~1.0.0",
     "request": "~2.73.0",
