--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "cron": "~1.1.0",
     "express": "~4.14.0",
     "express-winston": "~1.4.2",
-    "eztv-api-pt": "~1.0.5",
-    "hummingbird-api": "^1.0.5",
-    "kat-api-pt": "~1.0.8",
+    "eztv-api-pt": "~1.0.7",
+    "horriblesubs-api": "~1.0.0",
+    "hummingbird-api": "~1.0.7",
+    "kat-api-pt": "~1.0.9",
     "mongoose": "~4.5.3",
-    "nyaa-api-pt": "^1.0.0",
+    "nyaa-api-pt": "~1.0.2",
     "parse-torrent": "~5.8.0",
     "prompt": "~1.0.0",
     "request": "~2.73.0",
@@ -28,10 +29,10 @@
     "winston": "~2.2.0"
   },
   "devDependencies": {
-    "babel-cli": "~6.10.1",
+    "babel-cli": "~6.11.4",
     "babel-plugin-transform-async-to-generator": "~6.8.0",
     "babel-plugin-transform-runtime": "~6.9.0",
-    "babel-plugin-transform-strict-mode": "~6.8.0",
+    "babel-plugin-transform-strict-mode": "~6.11.3",
     "babel-preset-es2015": "~6.9.0",
     "del": "~2.2.1",
     "docdash": "~0.4.0",
