--- a/package.json
+++ b/package.json
@@ -3,44 +3,43 @@
   "version": "2.0.0",
   "description": "Popcorn Time API is developed to make it easier for anyone to create their own version of Popcorn Time.",
   "dependencies": {
-    "async-q": "~0.3.1",
-    "babel-runtime": "~6.9.2",
-    "body-parser": "~1.15.2",
-    "bytes": "~2.4.0",
-    "cheerio": "~0.20.0",
-    "commander": "~2.9.0",
-    "compression": "~1.6.2",
-    "cron": "~1.1.0",
-    "express": "~4.14.0",
-    "express-winston": "~1.4.2",
-    "eztv-api-pt": "~1.0.7",
-    "horriblesubs-api": "~1.0.0",
-    "hummingbird-api": "~1.0.7",
-    "kat-api-pt": "~1.0.9",
-    "mongoose": "~4.5.3",
-    "nyaa-api-pt": "~1.0.2",
-    "parse-torrent": "~5.8.0",
-    "prompt": "~1.0.0",
-    "request": "~2.73.0",
-    "response-time": "~2.3.1",
-    "sprintf": "~0.1.5",
-    "torrent-tracker-health": "~1.0.0",
-    "trakt.tv": "~1.4.2",
-    "winston": "~2.2.0"
+    "async-q": "^0.3.1",
+    "babel-runtime": "^6.9.2",
+    "body-parser": "^1.15.2",
+    "bytes": "^2.4.0",
+    "cheerio": "^0.20.0",
+    "commander": "^2.9.0",
+    "compression": "^1.6.2",
+    "cron": "^1.1.0",
+    "express": "^4.14.0",
+    "express-winston": "^1.4.2",
+    "eztv-api-pt": "^1.0.7",
+    "hummingbird-api": "^1.0.7",
+    "kat-api-pt": "^1.0.9",
+    "mongoose": "^4.5.3",
+    "nyaa-api-pt": "^1.0.2",
+    "parse-torrent": "^5.8.0",
+    "prompt": "^1.0.0",
+    "request": "^2.74.0",
+    "response-time": "^2.3.1",
+    "sprintf": "^0.1.5",
+    "torrent-tracker-health": "^1.0.0",
+    "trakt.tv": "^1.4.2",
+    "winston": "^2.2.0"
   },
   "devDependencies": {
-    "babel-cli": "~6.11.4",
-    "babel-plugin-transform-async-to-generator": "~6.8.0",
-    "babel-plugin-transform-runtime": "~6.9.0",
-    "babel-plugin-transform-strict-mode": "~6.11.3",
-    "babel-preset-es2015": "~6.9.0",
-    "del": "~2.2.1",
-    "docdash": "~0.4.0",
-    "forever": "~0.15.2",
-    "gulp": "~3.9.1",
-    "gulp-babel": "~6.1.2",
-    "jsdoc": "~3.4.0",
-    "jsdoc-babel": "~0.2.1"
+    "babel-cli": "^6.11.4",
+    "babel-plugin-transform-async-to-generator": "^6.8.0",
+    "babel-plugin-transform-runtime": "^6.9.0",
+    "babel-plugin-transform-strict-mode": "^6.11.3",
+    "babel-preset-es2015": "^6.9.0",
+    "del": "^2.2.1",
+    "docdash": "^0.4.0",
+    "forever": "^0.15.2",
+    "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "jsdoc": "^3.4.0",
+    "jsdoc-babel": "^0.2.1"
   },
   "license": "MIT",
   "scripts": {
@@ -56,7 +55,7 @@
     "popcorn-api": "./build/popcorn-api.js"
   },
   "engines": {
-    "node": ">=5.0.0"
+    "node": ">=6.3.0"
   },
   "main": "./build/popcorn-api.js",
   "repository": {
