--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: node_js
 node_js:
   - "6"
 services: mongodb
+git:
+  submodules: false
 before_script:
   - npm install -g gulp
 script: gulp
