--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,5 @@ git:
 before_script:
   - npm install -g gulp
 script: gulp
+after_script:
+  - "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
