--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "hummingbird-api": "^1.0.8",
     "kat-api-pt": "^1.0.11",
     "mongoose": "^4.5.8",
-    "parse-torrent": "^5.8.0",
+    "parse-torrent": "^5.8.1",
     "prompt": "^1.0.0",
     "request": "^2.74.0",
     "response-time": "^2.3.1",
@@ -34,15 +34,21 @@
     "babel-plugin-transform-runtime": "^6.12.0",
     "babel-plugin-transform-strict-mode": "^6.11.3",
     "babel-preset-es2015": "^6.13.2",
+    "chai": "^3.5.0",
+    "chai-http": "^3.0.0",
+    "coveralls": "^2.11.12",
     "del": "^2.2.1",
-    "esdoc": "^0.4.7",
+    "esdoc": "^0.4.8",
     "esdoc-es7-plugin": "0.0.3",
     "forever": "^0.15.2",
     "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2"
+    "gulp-babel": "^6.1.2",
+    "istanbul": "^0.4.4",
+    "mocha": "^3.0.2"
   },
   "license": "MIT",
   "scripts": {
+    "test": "./node_modules/.bin/istanbul cover ./node_modules/.bin/mocha --recursive --compilers js:babel-register",
     "prepublish": "./node_modules/.bin/gulp build",
     "start": "node ./build/popcorn-api.js --run",
     "start-dev": "./node_modules/.bin/babel-node ./src/popcorn-api.js --run",
