added test to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ git:
   submodules: false
 before_script:
   - npm install -g gulp
-script: gulp
+script:
+  - gulp
+  - npm test
 after_script:
-  - "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js"
+  - "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls"
