--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "babel-plugin-transform-runtime": "^6.12.0",
     "babel-plugin-transform-strict-mode": "^6.11.3",
     "babel-preset-es2015": "^6.13.2",
+    "babel-register": "^6.11.6",
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
     "coveralls": "^2.11.12",
@@ -48,7 +49,7 @@
   },
   "license": "MIT",
   "scripts": {
-    "test": "./node_modules/.bin/istanbul cover ./node_modules/.bin/mocha --recursive --compilers js:babel-register",
+    "test": "./node_modules/.bin/istanbul cover ./node_modules/.bin/mocha ./test/* --recursive --compilers js:babel-register",
     "prepublish": "./node_modules/.bin/gulp build",
     "start": "node ./build/popcorn-api.js --run",
     "start-dev": "./node_modules/.bin/babel-node ./src/popcorn-api.js --run",
