--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ git:
 before_script:
   - npm i -g gulp
   - gulp build
-  - ./build/popcorn-api --server
+  - ./build/popcorn-api.js --server
 
 script:
   - npm test
