--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,14 @@ language: node_js
 node_js:
   - "6"
 
-services: mongodb
+addons:
+  apt:
+    sources:
+      - mongodb-upstart
+      - mongodb-3.2-precise
+    packages:
+      - mongodb-org-server
+      - mongodb-org-shell
 
 git:
   submodules: false
