--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "hummingbird-api": "^1.0.8",
     "kat-api-pt": "^1.0.11",
     "mongoose": "^4.5.8",
+    "node-tvdb": "^2.0.11",
     "parse-torrent": "^5.8.1",
     "prompt": "^1.0.0",
     "request": "^2.74.0",
