--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
   },
   "license": "MIT",
   "scripts": {
-    "test": "./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha ./test/*",
+    "test": "./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha ./test/**/*.js",
     "coverage": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
     "prepublish": "./node_modules/.bin/gulp build",
     "start": "node ./build/popcorn-api.js --run",
