--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "express": "^4.14.0",
     "express-winston": "^2.0.0",
     "extratorrent-api": "^1.0.2",
-    "eztv-api-pt": "^1.0.8",
+    "eztv-api-pt": "^1.0.9",
     "horriblesubs-api": "^1.0.2",
-    "hummingbird-api": "^1.0.8",
-    "kat-api-pt": "^1.0.11",
+    "hummingbird-api": "^1.0.9",
+    "kat-api-pt": "^1.0.12",
     "mongoose": "^4.5.8",
     "node-tvdb": "^2.0.11",
     "parse-torrent": "^5.8.1",
@@ -35,6 +35,7 @@
     "babel-plugin-transform-runtime": "^6.12.0",
     "babel-plugin-transform-strict-mode": "^6.11.3",
     "babel-preset-es2015": "^6.13.2",
+    "babel-register": "^6.11.6",
     "chai": "^3.5.0",
     "chai-http": "^3.0.0",
     "coveralls": "^2.11.12",
@@ -44,12 +45,12 @@
     "forever": "^0.15.2",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
-    "istanbul": "^0.4.4",
+    "istanbul": "^1.0.0-alpha.2",
     "mocha": "^3.0.2"
   },
   "license": "MIT",
   "scripts": {
-    "test": "./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha ./test/**/*.js",
+    "test": "./node_modules/.bin/istanbul cover node_modules/mocha/bin/_mocha -- --compilers js:babel-core/register --colors -R spec test/**/*.js",
     "coverage": "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls",
     "prepublish": "./node_modules/.bin/gulp build",
     "start": "node ./build/popcorn-api.js --run",
