added fanart api instance

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-winston": "^2.0.0",
     "extratorrent-api": "^1.0.4",
     "eztv-api-pt": "^1.0.11",
+    "fanart.tv-api": "^1.0.1",
     "horriblesubs-api": "^1.0.4",
     "hummingbird-api": "^1.0.9",
     "kat-api-pt": "^1.0.12",
