--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "cron": "^1.1.1",
     "express": "^4.14.0",
     "express-winston": "^2.0.0",
-    "extratorrent-api": "^1.0.5",
+    "extratorrent-api": "^1.0.8",
     "eztv-api-pt": "^1.0.11",
-    "fanart.tv-api": "^1.0.1",
+    "fanart.tv-api": "^1.0.2",
     "horriblesubs-api": "^1.0.5",
     "hummingbird-api": "^1.0.9",
     "kat-api-pt": "^1.0.12",
@@ -27,6 +27,7 @@
     "request": "^2.76.0",
     "response-time": "^2.3.1",
     "sprintf": "^0.1.5",
+    "themoviedbclient": "^0.1.3",
     "torrent-tracker-health": "^1.0.0",
     "trakt.tv": "^2.0.0",
     "winston": "^2.2.0"
