--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,37 @@
 language: node_js
 
 node_js:
-  - "6"
+  - '6'
+  - '7'
 
 addons:
+
   apt:
+
     sources:
       - mongodb-upstart
       - mongodb-3.2-precise
+
     packages:
       - mongodb-org-server
       - mongodb-org-shell
+
+env:
+  - NODE_ENV=test
 
 git:
   submodules: false
 
 before_script:
-  - npm i -g gulp
   - npm run lint
   - gulp build
   - npm run server-dev &
 
 script:
-  - npm test
-
+  - dredd
 after_script:
+
   - npm run coverage
+
+before_install:
+  - npm install -g eslint gulp dredd@stable
