--- a/package.json
+++ b/package.json
@@ -41,18 +41,13 @@
     "babel-plugin-transform-strict-mode": "^6.18.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-register": "^6.18.0",
-    "chai": "^3.5.0",
-    "chai-http": "^3.0.0",
-    "coveralls": "^2.11.14",
     "del": "^2.2.2",
     "esdoc": "^0.4.8",
     "esdoc-es7-plugin": "0.0.3",
     "eslint": "^3.10.2",
     "forever": "^0.15.2",
     "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "istanbul": "^1.0.0-alpha.2",
-    "mocha": "^3.1.2"
+    "gulp-babel": "^6.1.2"
   },
   "license": "MIT",
   "scripts": {
