--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-register": "^6.18.0",
     "del": "^2.2.2",
+    "dredd": "^2.2.5",
     "esdoc": "^0.4.8",
     "esdoc-es7-plugin": "0.0.3",
     "eslint": "^3.10.2",
