updated test script

--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
   },
   "license": "MIT",
   "scripts": {
-    "test": "./node_modules/.bin/istanbul cover node_modules/mocha/bin/_mocha -- --compilers js:babel-core/register --colors -R spec test/**/*.js",
+    "test": "./node_modules/.bin/dredd",
     "prepublish": "./node_modules/.bin/gulp build",
     "start": "node ./build/popcorn-api.js --run",
     "start-dev": "./node_modules/.bin/babel-node ./src/popcorn-api.js --run",
