--- a/.travis.yml
+++ b/.travis.yml
@@ -9,13 +9,17 @@ node_js:
   - '7'
 
 addons:
-apt:
-  sources:
-    - mongodb-upstart
-    - mongodb-3.2-precise
-  packages:
-    - mongodb-org-server
-    - mongodb-org-shell
+  apt:
+    sources:
+      - mongodb-upstart
+      - mongodb-3.2-precise
+    packages:
+      - mongodb-org-server
+      - mongodb-org-shell
+      - mongodb-org-tools
+
+services:
+  - mongodb
 
 env:
   - NODE_ENV=test
