added class properties

--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,7 @@
     "es2015"
   ],
   "plugins": [
+    "transform-class-properties",
     "transform-async-to-generator",
     "transform-strict-mode", [
       "transform-runtime", {
