--- a/package.json
+++ b/package.json
@@ -4,21 +4,22 @@
   "description": "Popcorn Time API is developed to make it easier for anyone to create their own version of Popcorn Time.",
   "dependencies": {
     "async-q": "^0.3.1",
-    "babel-runtime": "^6.20.0",
-    "body-parser": "^1.15.2",
+    "babel-runtime": "^6.23.0",
+    "body-parser": "^1.16.1",
+    "butter-provider": "git+https://github.com/butterproviders/butter-provider.git",
     "bytes": "^2.4.0",
     "commander": "^2.9.0",
     "compression": "^1.6.2",
     "cron": "^1.2.1",
-    "express": "^4.14.0",
-    "express-winston": "^2.1.2",
+    "express": "^4.14.1",
+    "express-winston": "^2.2.0",
     "extratorrent-api": "^1.0.10",
     "eztv-api-pt": "^1.0.12",
     "fanart.tv-api": "^1.0.3",
     "horriblesubs-api": "^1.0.6",
     "kat-api-pt": "^1.0.12",
-    "mongoose": "^4.7.4",
-    "node-tvdb": "^2.0.20",
+    "mongoose": "^4.8.2",
+    "node-tvdb": "^3.0.1",
     "nyaa-api-pt": "^1.0.9",
     "omdb-api-pt": "^1.0.1",
     "parse-torrent": "^5.8.1",
@@ -28,21 +29,22 @@
     "sprintf": "^0.1.5",
     "themoviedbclient": "^0.1.3",
     "torrent-tracker-health": "^1.0.0",
-    "trakt.tv": "^2.2.0",
-    "winston": "^2.3.0"
+    "trakt.tv": "^3.2.0",
+    "winston": "^2.3.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.18.0",
+    "babel-cli": "^6.23.0",
     "babel-eslint": "^7.1.1",
-    "babel-plugin-transform-async-to-generator": "^6.16.0",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-plugin-transform-strict-mode": "^6.18.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-register": "^6.18.0",
+    "babel-plugin-transform-async-to-generator": "^6.22.0",
+    "babel-plugin-transform-class-properties": "^6.23.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-plugin-transform-strict-mode": "^6.22.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-register": "^6.23.0",
     "del": "^2.2.2",
     "dredd": "^2.2.5",
-    "esdoc": "^0.5.0",
-    "eslint": "^3.12.2",
+    "esdoc": "^0.5.2",
+    "eslint": "^3.15.0",
     "forever": "^0.15.3",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2"
@@ -57,7 +59,7 @@
     "server-dev": "./node_modules/.bin/babel-node ./src/popcorn-api.js --server",
     "forever": "./node_modules/.bin/forever start ./build/popcorn-api.js --run",
     "docs": "./node_modules/.bin/esdoc -c .esdoc.json",
-    "lint": "./node_modules/.bin/eslint src/**/*.js"
+    "lint": "./node_modules/.bin/eslint -c .eslintrc.js src/**/*.js"
   },
   "bin": {
     "popcorn-api": "./build/popcorn-api.js"
