--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
     "omdb-api-pt": "^1.0.1",
     "parse-torrent": "^5.8.1",
     "prompt": "^1.0.0",
-    "request": "^2.79.0",
     "response-time": "^2.3.2",
     "sprintf": "^0.1.5",
     "themoviedbclient": "^0.1.3",
     "torrent-tracker-health": "^1.0.0",
-    "trakt.tv": "^3.2.0",
-    "winston": "^2.3.1"
+    "trakt.tv": "^4.0.0",
+    "winston": "^2.3.1",
+    "yts-api-pt": "^1.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.23.0",
