added cross-env and updated deps

--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "cron": "^1.2.1",
     "express": "^4.14.1",
     "express-winston": "^2.2.0",
-    "extratorrent-api": "^1.0.10",
+    "extratorrent-api": "^1.1.0",
     "eztv-api-pt": "^1.0.12",
     "fanart.tv-api": "^1.0.3",
     "horriblesubs-api": "^1.0.6",
     "kat-api-pt": "^1.0.12",
-    "mongoose": "^4.8.2",
-    "node-tvdb": "^3.0.1",
+    "mongoose": "^4.8.5",
+    "node-tvdb": "^3.1.0",
     "nyaa-api-pt": "^1.0.9",
     "omdb-api-pt": "^1.0.1",
     "parse-torrent": "^5.8.1",
@@ -28,7 +28,7 @@
     "sprintf": "^0.1.5",
     "themoviedbclient": "^0.1.3",
     "torrent-tracker-health": "^1.0.0",
-    "trakt.tv": "^4.0.0",
+    "trakt.tv": "^5.0.1",
     "winston": "^2.3.1",
     "yts-api-pt": "^1.0.0"
   },
@@ -41,23 +41,24 @@
     "babel-plugin-transform-strict-mode": "^6.22.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-register": "^6.23.0",
+    "cross-env": "^3.1.4",
     "del": "^2.2.2",
-    "dredd": "^2.2.5",
+    "dredd": "^3.0.0",
     "esdoc": "^0.5.2",
-    "eslint": "^3.15.0",
+    "eslint": "^3.16.1",
     "forever": "^0.15.3",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2"
   },
   "license": "MIT",
   "scripts": {
-    "test": "./node_modules/.bin/babel-node ./node_modules/.bin/dredd",
+    "test": "cross-env NODE_ENV=test ./node_modules/.bin/babel-node ./node_modules/.bin/dredd",
     "prepublish": "./node_modules/.bin/gulp build",
-    "start": "node ./build/popcorn-api.js --run",
-    "start-dev": "./node_modules/.bin/babel-node ./src/popcorn-api.js --run",
-    "server": "node ./build/popcorn-api.js --server",
-    "server-dev": "./node_modules/.bin/babel-node ./src/popcorn-api.js --server",
-    "forever": "./node_modules/.bin/forever start ./build/popcorn-api.js --run",
+    "start": "cross-env NODE_ENV=prod node ./build/popcorn-api.js --run",
+    "start-dev": "cross-env NODE_ENV=development ./node_modules/.bin/babel-node ./src/popcorn-api.js --run",
+    "server": "cross-env NODE_ENV=prod node ./build/popcorn-api.js --server",
+    "server-dev": "cross-env NODE_ENV=development ./node_modules/.bin/babel-node ./src/popcorn-api.js --server",
+    "forever": "cross-env NODE_ENV=prod ./node_modules/.bin/forever start ./build/popcorn-api.js --run",
     "docs": "./node_modules/.bin/esdoc -c .esdoc.json",
     "lint": "./node_modules/.bin/eslint -c .eslintrc.js src/**/*.js"
   },
