--- a/package.json
+++ b/package.json
@@ -5,27 +5,27 @@
   "dependencies": {
     "async-q": "^0.3.1",
     "babel-runtime": "^6.23.0",
-    "body-parser": "^1.16.1",
+    "body-parser": "^1.17.1",
     "butter-provider": "git+https://github.com/butterproviders/butter-provider.git",
     "bytes": "^2.4.0",
     "commander": "^2.9.0",
     "compression": "^1.6.2",
     "cron": "^1.2.1",
-    "express": "^4.14.1",
-    "express-winston": "^2.2.0",
-    "extratorrent-api": "^1.1.0",
+    "express": "^4.15.2",
+    "express-winston": "^2.3.0",
+    "extratorrent-api": "^1.1.2",
     "eztv-api-pt": "^1.0.12",
     "fanart.tv-api": "^1.0.3",
     "horriblesubs-api": "^1.0.6",
-    "kat-api-pt": "^1.0.12",
-    "mongoose": "^4.8.5",
-    "node-tvdb": "^3.1.0",
+    "kat-api-pt": "^2.0.1",
+    "mongoose": "^4.9.1",
+    "node-tvdb": "^3.1.1",
     "nyaa-api-pt": "^1.0.9",
     "omdb-api-pt": "^1.0.1",
-    "parse-torrent": "^5.8.1",
+    "parse-torrent": "^5.8.2",
     "prompt": "^1.0.0",
     "response-time": "^2.3.2",
-    "sprintf": "^0.1.5",
+    "sprintf-js": "^1.0.3",
     "themoviedbclient": "^0.1.3",
     "torrent-tracker-health": "^1.0.0",
     "trakt.tv": "^5.0.1",
@@ -33,19 +33,19 @@
     "yts-api-pt": "^1.0.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.23.0",
-    "babel-eslint": "^7.1.1",
+    "babel-cli": "^6.24.0",
+    "babel-eslint": "^7.2.0",
     "babel-plugin-transform-async-to-generator": "^6.22.0",
     "babel-plugin-transform-class-properties": "^6.23.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-plugin-transform-strict-mode": "^6.22.0",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-register": "^6.23.0",
-    "cross-env": "^3.1.4",
+    "babel-preset-es2015": "^6.24.0",
+    "babel-register": "^6.24.0",
+    "cross-env": "^3.2.4",
     "del": "^2.2.2",
-    "dredd": "^3.0.0",
+    "dredd": "^3.2.2",
     "esdoc": "^0.5.2",
-    "eslint": "^3.16.1",
+    "eslint": "^3.18.0",
     "forever": "^0.15.3",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2"
