updated package.json and added 2 babel-plugins

--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,8 @@
     "es2015"
   ],
   "plugins": [
+    "dynamic-import-node",
+    "syntax-dynamic-import",
     "transform-class-properties",
     "transform-strict-mode", [
       "transform-runtime", {
