re-done scripts to work with the refactored cli

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ git:
 
 before_script:
   - mongo --version
-  - npm install -g eslint gulp dredd@stable babel-cli
+  - npm install -g babel-cli dredd@stable eslint gulp
   - npm run lint
   - npm run docs
-  - gulp build
+  - npm run build
