--- a/package.json
+++ b/package.json
@@ -53,15 +53,14 @@
   },
   "license": "MIT",
   "scripts": {
-    "test": "cross-env NODE_ENV=test ./node_modules/.bin/babel-node ./node_modules/.bin/dredd",
-    "prepublish": "./node_modules/.bin/gulp build",
-    "start": "cross-env NODE_ENV=prod node ./build/popcorn-api.js --run",
-    "start-dev": "cross-env NODE_ENV=development ./node_modules/.bin/babel-node ./src/popcorn-api.js --run",
-    "server": "cross-env NODE_ENV=prod node ./build/popcorn-api.js --server",
-    "server-dev": "cross-env NODE_ENV=development ./node_modules/.bin/babel-node ./src/popcorn-api.js --server",
-    "forever": "cross-env NODE_ENV=prod ./node_modules/.bin/forever start ./build/popcorn-api.js --run",
-    "docs": "./node_modules/.bin/esdoc -c .esdoc.json",
-    "lint": "./node_modules/.bin/eslint -c .eslintrc.js src/**/*.js"
+    "build": "gulp build",
+    "dev": "cross-env NODE_ENV=development babel-node ./src/popcorn-api.js -m pretty",
+    "docs": "esdoc -c .esdoc.json",
+    "forever": "cross-env NODE_ENV=prod forever start ./build/popcorn-api.js -m pretty",
+    "lint": "eslint -c .eslintrc.js src/**/*.js",
+    "prestart": "npm run build",
+    "start": "cross-env NODE_ENV=prod node ./build/popcorn-api.js -m pretty",
+    "test": "cross-env NODE_ENV=test babel-node dredd"
   },
   "bin": {
     "popcorn-api": "./build/popcorn-api.js"
