ensure npm test works

--- a/package.json
+++ b/package.json
@@ -59,9 +59,10 @@
     "forever": "cross-env NODE_ENV=prod forever start ./build/popcorn-api.js -m pretty",
     "lint": "eslint -c .eslintrc.js src/**/*.js",
     "prestart": "npm run build",
+    "pretest": "npm run build",
     "providers": "cross-env NODE_ENV=production babel-node ./src/scraper/configs",
     "start": "cross-env NODE_ENV=prod node ./build/popcorn-api.js -m pretty",
-    "test": "cross-env NODE_ENV=test babel-node dredd"
+    "test": "cross-env NODE_ENV=test babel-node ./node_modules/dredd/bin/dredd"
   },
   "bin": {
     "popcorn-api": "./build/popcorn-api.js"
