--- a/package.json
+++ b/package.json
@@ -4,49 +4,63 @@
   "description": "Popcorn Time API is developed to make it easier for anyone to create their own version of Popcorn Time.",
   "dependencies": {
     "async-q": "^0.3.1",
-    "babel-runtime": "^6.23.0",
-    "body-parser": "^1.17.1",
+    "babel-runtime": "^6.25.0",
+    "body-parser": "^1.17.2",
     "butter-provider": "git+https://github.com/butterproviders/butter-provider.git",
     "bytes": "^2.5.0",
-    "commander": "^2.9.0",
-    "compression": "^1.6.2",
+    "commander": "^2.11.0",
+    "compression": "^1.7.0",
     "cron": "^1.2.1",
-    "express": "^4.15.2",
-    "express-winston": "^2.3.0",
+    "express": "^4.15.3",
+    "express-winston": "^2.4.0",
     "extratorrent-api": "^1.1.4",
     "eztv-api-pt": "^1.0.12",
     "fanart.tv-api": "^1.0.3",
     "horriblesubs-api": "^1.0.6",
     "kat-api-pt": "^2.0.1",
-    "mongoose": "^4.9.5",
-    "node-tvdb": "^3.1.1",
+    "mongoose": "^4.11.4",
+    "node-tvdb": "^3.2.0",
     "nyaa-api-pt": "^1.0.9",
     "omdb-api-pt": "^1.0.1",
     "parse-torrent": "^5.8.3",
     "prompt": "^1.0.0",
     "response-time": "^2.3.2",
-    "sprintf-js": "^1.0.3",
+    "sprintf-js": "^1.1.1",
     "tmdbapi": "^1.0.2",
-    "trakt.tv": "^5.0.1",
+    "trakt.tv": "^5.1.0",
     "webtorrent-health": "^1.1.1",
     "winston": "^2.3.1",
     "yts-api-pt": "^1.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
-    "babel-eslint": "^7.2.2",
-    "babel-plugin-dynamic-import-node": "^1.0.1",
+    "babel-eslint": "^7.2.3",
+    "babel-plugin-dynamic-import-node": "^1.0.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-plugin-transform-strict-mode": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.24.1",
-    "cross-env": "^4.0.0",
-    "del": "^2.2.2",
-    "dredd": "^3.4.3",
-    "esdoc": "^0.5.2",
-    "eslint": "^3.19.0",
+    "cross-env": "^5.0.1",
+    "del": "^3.0.0",
+    "dredd": "^4.1.2",
+    "esdoc": "^1.0.1",
+    "esdoc-accessor-plugin": "1.0.0",
+    "esdoc-brand-plugin": "1.0.0",
+    "esdoc-coverage-plugin": "1.0.0",
+    "esdoc-ecmascript-proposal-plugin": "1.0.0",
+    "esdoc-external-ecmascript-plugin": "1.0.0",
+    "esdoc-external-nodejs-plugin": "1.0.0",
+    "esdoc-flow-plugin": "^1.0.0",
+    "esdoc-flow-type-plugin": "1.0.0",
+    "esdoc-integrate-manual-plugin": "1.0.0",
+    "esdoc-integrate-test-plugin": "1.0.0",
+    "esdoc-lint-plugin": "1.0.0",
+    "esdoc-publish-html-plugin": "1.0.0",
+    "esdoc-undocumented-identifier-plugin": "1.0.0",
+    "esdoc-unexported-identifier-plugin": "1.0.0",
+    "eslint": "^4.3.0",
     "forever": "^0.15.3",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2"
