add flow to project

--- a/package.json
+++ b/package.json
@@ -61,6 +61,9 @@
     "esdoc-undocumented-identifier-plugin": "1.0.0",
     "esdoc-unexported-identifier-plugin": "1.0.0",
     "eslint": "^4.3.0",
+    "flow": "^0.2.3",
+    "flow-bin": "^0.51.1",
+    "flow-typed": "^2.1.5",
     "forever": "^0.15.3",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2"
@@ -70,6 +73,8 @@
     "build": "gulp build",
     "dev": "cross-env NODE_ENV=development babel-node ./src/popcorn-api.js -m pretty",
     "docs": "esdoc -c .esdoc.json",
+    "flow": "flow",
+    "flow-typed": "flow-typed",
     "forever": "cross-env NODE_ENV=prod forever start ./build/popcorn-api.js -m pretty",
     "lint": "eslint -c .eslintrc.js src/**/*.js",
     "prestart": "npm run build",
