move to standardjs

--- a/package.json
+++ b/package.json
@@ -61,6 +61,13 @@
     "esdoc-undocumented-identifier-plugin": "1.0.0",
     "esdoc-unexported-identifier-plugin": "1.0.0",
     "eslint": "^4.3.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-flowtype": "^2.35.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-json": "^1.2.0",
+    "eslint-plugin-node": "^5.1.1",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1",
     "flow": "^0.2.3",
     "flow-bin": "^0.51.1",
     "flow-typed": "^2.1.5",
@@ -76,7 +83,7 @@
     "flow": "flow",
     "flow-typed": "flow-typed",
     "forever": "cross-env NODE_ENV=prod forever start ./build/popcorn-api.js -m pretty",
-    "lint": "eslint -c .eslintrc.js src/**/*.js",
+    "lint": "eslint -c .eslintrc.js {src,test}/**",
     "prestart": "npm run build",
     "pretest": "npm run build",
     "providers": "cross-env NODE_ENV=production babel-node ./src/scraper/configs",
