--- a/.babelrc
+++ b/.babelrc
@@ -1,16 +1,12 @@
 {
   "presets": [
-    "es2015"
+    "es2015",
+    "flow"
   ],
   "plugins": [
     "dynamic-import-node",
     "syntax-dynamic-import",
     "transform-class-properties",
-    "transform-strict-mode", [
-      "transform-runtime", {
-        "polyfill": false,
-        "regenerator": true
-      }
-    ]
+    "transform-object-rest-spread"
   ]
 }
