--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "commander": "^2.11.0",
     "compression": "^1.7.0",
     "cron": "^1.2.1",
+    "dotenv": "^4.0.0",
     "express": "^4.15.3",
     "express-winston": "^2.4.0",
     "extratorrent-api": "^1.1.4",
@@ -38,9 +39,9 @@
     "babel-plugin-dynamic-import-node": "^1.0.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-plugin-transform-strict-mode": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-flow": "^6.23.0",
     "babel-register": "^6.24.1",
     "cross-env": "^5.0.1",
     "del": "^3.0.0",
