--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,9 @@ dist: trusty
 language: node_js
 
 node_js:
-  - '6'
-  - '7'
+  - 6
+  - 7
+  - 8
 
 addons:
   apt:
@@ -27,9 +28,19 @@ env:
 git:
   submodules: false
 
-before_script:
-  - mongo --version
-  - npm install -g babel-cli dredd@stable eslint gulp
-  - npm run lint
-  - npm run docs
-  - npm run build
+jobs:
+  include:
+    - stage: lint
+      before_script: 
+        - npm i -g flow-typed
+        - flow-typed install
+      script: npm run flow
+      script: npm run lint
+    - stage: test
+      script: npm run test
+      after_success: npm run coveralls
+    - stage: build
+      before_script: npm i -g gulp
+      script: npm run gulp
+    - stage: pages
+      script: npm run docs
