--- a/package.json
+++ b/package.json
@@ -37,12 +37,16 @@
     "babel-cli": "^6.24.1",
     "babel-eslint": "^7.2.3",
     "babel-plugin-dynamic-import-node": "^1.0.2",
+    "babel-plugin-istanbul": "^4.1.4",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-flow": "^6.23.0",
     "babel-register": "^6.24.1",
+    "chai": "^4.1.0",
+    "chai-http": "^3.0.0",
+    "coveralls": "^2.13.1",
     "cross-env": "^5.0.1",
     "del": "^3.0.0",
     "dredd": "^4.1.2",
@@ -74,11 +78,14 @@
     "flow-typed": "^2.1.5",
     "forever": "^0.15.3",
     "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2"
+    "gulp-babel": "^6.1.2",
+    "mocha": "^3.4.2",
+    "nyc": "^11.1.0"
   },
   "license": "MIT",
   "scripts": {
     "build": "gulp build",
+    "coveralls": "cat ./coverage/lcov.info | node ./node_modules/.bin/coveralls",
     "dev": "cross-env NODE_ENV=development babel-node ./src/popcorn-api.js -m pretty",
     "docs": "esdoc -c .esdoc.json",
     "flow": "flow",
@@ -89,7 +96,9 @@
     "pretest": "npm run build",
     "providers": "cross-env NODE_ENV=production babel-node ./src/scraper/configs",
     "start": "cross-env NODE_ENV=prod node ./build/popcorn-api.js -m pretty",
-    "test": "cross-env NODE_ENV=test babel-node ./node_modules/dredd/bin/dredd"
+    "test": "npm run test-dredd && npm run test-mocha",
+    "test-dredd": "cross-env NODE_ENV=test babel-node ./node_modules/dredd/bin/dredd",
+    "test-mocha": "cross-env NODE_ENV=test ./node_modules/.bin/nyc --reporter=lcov --reporter=text ./node_modules/.bin/mocha --recursive --timeout 10000 --reporter spec test/**"
   },
   "bin": {
     "popcorn-api": "./build/popcorn-api.js"
@@ -101,5 +110,12 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/popcorn-official/popcorn-api.git"
+  },
+  "nyc": {
+    "require": [
+      "babel-register"
+    ],
+    "sourceMap": false,
+    "instrument": false
   }
 }
