--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-plugin-transform-regenerator": "^6.24.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-flow": "^6.23.0",
     "babel-register": "^6.24.1",
@@ -90,7 +92,7 @@
     "flow": "flow",
     "flow-typed": "flow-typed",
     "forever": "cross-env NODE_ENV=prod forever start ./build/popcorn-api.js -m pretty",
-    "lint": "eslint -c .eslintrc.js {src,test}/**",
+    "lint": "eslint -c .eslintrc.js {src,test}/** ./*.js",
     "prestart": "npm run build",
     "pretest": "npm run build",
     "providers": "cross-env NODE_ENV=production babel-node ./src/scraper/configs",
