--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ language: node_js
 cache:
   directories:
     - node_modules
+    - flow-typed
 
 addons:
   apt:
@@ -39,7 +40,9 @@ jobs:
     before_script:
       - npm i -g flow-typed
       - flow-typed install
-    script: npm run lint
+    script:
+      - npm run flow
+      - npm run lint
   - stage: test
     node_js: '6'
     script: npm run test
