--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "eztv-api-pt": "^1.3.1",
     "fanart.tv-api": "^2.0.1",
     "fs-extra": "^4.0.2",
-    "horriblesubs-api": "^1.0.7",
+    "horriblesubs-api": "^1.0.8",
+    "inquirer": "^3.3.0",
     "kat-api-pt": "^3.0.0",
     "mongoose": "^4.12.3",
     "node-tvdb": "^3.2.0",
@@ -23,7 +24,6 @@
     "omdb-api-pt": "^2.0.1",
     "p-times": "^1.0.1",
     "parse-torrent": "^5.8.3",
-    "prompt": "^1.0.0",
     "response-time": "^2.3.2",
     "sprintf-js": "^1.1.1",
     "tmdbapi": "^1.0.2",
@@ -77,6 +77,7 @@
     "gulp-babel": "^7.0.0",
     "husky": "^0.14.3",
     "mocha": "^4.0.1",
+    "mock-stdin": "^0.3.1",
     "nyc": "^11.2.1",
     "sinon": "^4.0.1"
   },
