--- a/.env.example
+++ b/.env.example
@@ -22,7 +22,7 @@ TVDB_KEY=
 MONGO_DATABASE=
 
 # The URI to the MongoDB database.
-# Needs to be named like this because of Gitlab CI.
+# Needs to be named like this because of GitLab CI.
 MONGO_URI=
 
 # The port of the MongoDB database.
