--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "node-tvdb": "^3.2.0",
     "nyaa-api-pt": "^2.0.0",
     "omdb-api-pt": "^2.0.1",
+    "p-map": "^1.2.0",
     "p-times": "^1.0.1",
     "parse-torrent": "^5.8.3",
     "response-time": "^2.3.2",
@@ -47,6 +48,7 @@
     "babel-register": "^6.26.0",
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
+    "cheerio": "^1.0.0-rc.2",
     "coveralls": "^3.0.0",
     "cqc": "^0.4.0",
     "cross-env": "^5.1.0",
