--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ git:
 jobs:
   include:
   - stage: prepare cache
-    node_js: '8'
+    node_js: '9'
     before_script:
     - npm i -g flow-typed
     - flow-typed install
@@ -58,12 +58,15 @@ jobs:
     node_js: '8'
     script: npm run test
     after_success: npm run coveralls
+  - stage: test
+    node_js: '9'
+    script: npm run test
+    after_success: npm run coveralls
   - stage: build
-    node_js: '8'
-    before_script: npm i -g gulp
+    node_js: '9'
     script: npm run build
   - stage: pages
-    node_js: '8'
+    node_js: '9'
     script: npm run docs
 
 notifications:
