--- a/package.json
+++ b/package.json
@@ -1,118 +1,88 @@
 {
   "name": "popcorn-api",
-  "version": "2.2.4",
+  "version": "4.0.0",
   "description": "Popcorn Time API is developed to make it easier for anyone to create their own version of Popcorn Time.",
   "dependencies": {
-    "body-parser": "^1.18.2",
-    "butter-provider": "git+https://github.com/butterproviders/butter-provider.git",
+    "babel-plugin-dynamic-import-node": "^1.1.0",
     "bytes": "^3.0.0",
-    "commander": "^2.11.0",
-    "compression": "^1.7.1",
-    "cron": "^1.3.0",
     "dotenv": "^4.0.0",
-    "express": "^4.16.2",
-    "express-winston": "^2.4.0",
     "eztv-api-pt": "^1.3.1",
     "fanart.tv-api": "^2.0.1",
-    "fs-extra": "^4.0.2",
     "horriblesubs-api": "^1.0.8",
     "inquirer": "^3.3.0",
     "kat-api-pt": "^3.0.0",
-    "mongoose": "^4.12.3",
+    "mongoose": "^4.13.1",
     "node-tvdb": "^3.2.0",
     "nyaa-api-pt": "^2.0.0",
     "omdb-api-pt": "^2.0.1",
     "p-map": "^1.2.0",
-    "p-times": "^1.0.1",
     "parse-torrent": "^5.8.3",
-    "response-time": "^2.3.2",
-    "sprintf-js": "^1.1.1",
+    "pop-api": "git+https://github.com/chrisalderson/pop-api.git#development",
+    "pop-api-scraper": "git+https://github.com/chrisalderson/pop-api-scraper.git#development",
     "tmdbapi": "^1.0.2",
-    "trakt.tv": "^6.0.1",
+    "trakt.tv": "^6.0.2",
     "webtorrent-health": "^1.1.1",
-    "winston": "^3.0.0-rc1",
     "yts-api-pt": "^2.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-eslint": "^8.0.1",
-    "babel-plugin-dynamic-import-node": "^1.1.0",
     "babel-plugin-istanbul": "^4.1.5",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-export-extensions": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-plugin-transform-strict-mode": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-flow": "^6.23.0",
     "babel-register": "^6.26.0",
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
-    "cheerio": "^1.0.0-rc.2",
     "coveralls": "^3.0.0",
-    "cqc": "^0.4.0",
-    "cross-env": "^5.1.0",
+    "cross-env": "^5.1.1",
     "del": "^3.0.0",
-    "dredd": "^4.5.0",
+    "dredd": "^4.7.0",
     "esdoc": "^1.0.3",
-    "esdoc-accessor-plugin": "1.0.0",
-    "esdoc-brand-plugin": "1.0.0",
-    "esdoc-coverage-plugin": "1.1.0",
     "esdoc-ecmascript-proposal-plugin": "1.0.0",
-    "esdoc-external-ecmascript-plugin": "1.0.0",
-    "esdoc-external-nodejs-plugin": "1.0.0",
-    "esdoc-flow-plugin": "^1.0.0",
     "esdoc-flow-type-plugin": "1.0.1",
-    "esdoc-integrate-manual-plugin": "1.0.0",
-    "esdoc-integrate-test-plugin": "1.0.0",
-    "esdoc-lint-plugin": "1.0.1",
-    "esdoc-publish-html-plugin": "1.1.0",
-    "esdoc-undocumented-identifier-plugin": "1.0.0",
-    "esdoc-unexported-identifier-plugin": "1.0.0",
-    "eslint": "^4.9.0",
+    "esdoc-standard-plugin": "^1.0.0",
+    "eslint": "^4.11.0",
     "eslint-config-vixo": "^2.0.0",
+    "express": "^4.16.2",
     "flow": "^0.2.3",
-    "flow-bin": "^0.57.3",
-    "flow-typed": "^2.2.0",
+    "flow-bin": "^0.59.0",
+    "flow-typed": "^2.2.3",
     "forever": "^0.15.3",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^7.0.0",
     "husky": "^0.14.3",
+    "mkdirp": "^0.5.1",
     "mocha": "^4.0.1",
-    "mock-stdin": "^0.3.1",
-    "nyc": "^11.2.1",
-    "sinon": "^4.0.1"
+    "nyc": "^11.3.0",
+    "sinon": "^4.1.2"
   },
   "license": "MIT",
   "scripts": {
-    "build": "gulp build",
+    "build": "./node_modules/.bin/babel src --out-dir build",
     "coveralls": "cat ./coverage/lcov.info | node ./node_modules/.bin/coveralls",
-    "cqc": "./node_modules/.bin/cqc \"{src,test}/**/*.js\" *.js --verbose",
-    "coverage": "./node_modules/.bin/babel-node coverage.js",
-    "debug": "cross-evn NODE_ENV=development DEBUG=popcorn-api:* node --require babel-register --inspect-brk=http://localhost:9229 ./src/popcorn-api.js -m pretty",
-    "dev": "cross-env NODE_ENV=development ./node_modules/.bin/babel-node ./src/popcorn-api.js -m pretty",
+    "debug": "cross-evn NODE_ENV=development DEBUG=popcorn-api:* node --require babel-register --inspect-brk=http://localhost:9229 ./src/index.js -m pretty",
+    "dev": "cross-env NODE_ENV=development ./node_modules/.bin/babel-node ./src/index.js -m pretty",
     "docs": "./node_modules/.bin/esdoc -c .esdoc.json",
     "flow": "./node_modules/.bin/flow",
-    "forever": "cross-env NODE_ENV=prod ./node_modules/.bin/forever start ./build/popcorn-api.js -m pretty",
+    "forever": "cross-env NODE_ENV=production ./node_modules/.bin/forever start ./build/index.js -m pretty",
     "lint": "./node_modules/.bin/eslint {src,test}/** ./*.js",
     "precommit": "npm run lint && npm run flow",
-    "preforever": "npm run build",
     "prepush": "npm run test",
-    "prestart": "npm run build",
     "pretest": "npm run build",
-    "providers": "./node_modules/.bin/babel-node ./src/popcorn-api.js --providers",
-    "start": "cross-env NODE_ENV=production node ./build/popcorn-api.js -m pretty",
+    "providers": "./node_modules/.bin/babel-node ./src/index.js --providers",
+    "start": "cross-env NODE_ENV=production node ./build/index.js -m pretty",
     "test": "npm run test-dredd && npm run test-mocha",
     "test-dredd": "cross-env NODE_ENV=test ./node_modules/.bin/babel-node ./node_modules/dredd/bin/dredd",
-    "test-mocha": "cross-env NODE_ENV=test ./node_modules/.bin/nyc --reporter=lcov --reporter=text ./node_modules/.bin/mocha --recursive --timeout 30000 --exit --reporter spec test/**"
+    "test-mocha": "cross-env NODE_ENV=test ./node_modules/.bin/nyc --reporter=lcov --reporter=text ./node_modules/.bin/mocha --recursive --exit --reporter spec test/**"
   },
   "bin": {
-    "popcorn-api": "./build/popcorn-api.js"
+    "popcorn-api": "./build/index.js"
   },
   "engines": {
-    "node": ">=6.3.0"
+    "node": ">=7.10.1"
   },
-  "main": "./build/popcorn-api.js",
+  "main": "./build/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/popcorn-official/popcorn-api.git"
@@ -126,6 +96,9 @@
   "nyc": {
     "require": [
       "babel-register"
+    ],
+    "include": [
+      "src"
     ],
     "sourceMap": false,
     "instrument": false
