A very experimental version with:  - [`pop-api](https://github.com/chrisalderson/pop-api)  - [`pop-api-scraper](https://github.com/chrisaldersson/pop-api-scraper}

--- a/package.json
+++ b/package.json
@@ -3,19 +3,19 @@
   "version": "4.0.0",
   "description": "Popcorn Time API is developed to make it easier for anyone to create their own version of Popcorn Time.",
   "dependencies": {
-    "babel-plugin-dynamic-import-node": "^1.1.0",
     "bytes": "^3.0.0",
     "dotenv": "^4.0.0",
     "eztv-api-pt": "^1.3.1",
     "fanart.tv-api": "^2.0.1",
     "horriblesubs-api": "^1.0.8",
-    "inquirer": "^3.3.0",
+    "inquirer": "^4.0.0",
     "kat-api-pt": "^3.0.0",
-    "mongoose": "^4.13.1",
+    "mongoose": "^4.13.3",
     "node-tvdb": "^3.2.0",
     "nyaa-api-pt": "^2.0.0",
     "omdb-api-pt": "^2.0.1",
     "p-map": "^1.2.0",
+    "p-times": "^1.0.1",
     "parse-torrent": "^5.8.3",
     "pop-api": "git+https://github.com/chrisalderson/pop-api.git#development",
     "pop-api-scraper": "git+https://github.com/chrisalderson/pop-api-scraper.git#development",
@@ -26,6 +26,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-plugin-dynamic-import-node": "^1.2.0",
     "babel-plugin-istanbul": "^4.1.5",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-export-extensions": "^6.22.0",
@@ -40,12 +41,12 @@
     "cross-env": "^5.1.1",
     "del": "^3.0.0",
     "dredd": "^4.7.0",
-    "esdoc": "^1.0.3",
+    "esdoc": "^1.0.4",
     "esdoc-ecmascript-proposal-plugin": "1.0.0",
     "esdoc-flow-type-plugin": "1.0.1",
     "esdoc-standard-plugin": "^1.0.0",
     "eslint": "^4.11.0",
-    "eslint-config-vixo": "^2.0.0",
+    "eslint-config-vixo": "^2.0.1",
     "express": "^4.16.2",
     "flow": "^0.2.3",
     "flow-bin": "^0.59.0",
