deps: Update mongoose, pop-api, pop-api-scraper, dredd and eslint deps

--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
     "horriblesubs-api": "^1.0.8",
     "inquirer": "^4.0.0",
     "kat-api-pt": "^3.0.0",
-    "mongoose": "^4.13.4",
+    "mongoose": "^4.13.5",
     "node-tvdb": "^3.2.0",
     "nyaa-api-pt": "^2.0.0",
     "omdb-api-pt": "^2.0.1",
     "p-map": "^1.2.0",
     "p-times": "^1.0.1",
     "parse-torrent": "^5.8.3",
-    "pop-api": "git+https://github.com/chrisalderson/pop-api.git#development",
-    "pop-api-scraper": "git+https://github.com/chrisalderson/pop-api-scraper.git#development",
+    "pop-api": "^0.1.0",
+    "pop-api-scraper": "git+https://github.com/ChrisAlderson/pop-api-scraper.git#development",
     "tmdbapi": "^1.0.2",
     "trakt.tv": "^6.0.2",
     "webtorrent-health": "^1.1.1",
@@ -40,12 +40,12 @@
     "coveralls": "^3.0.0",
     "cross-env": "^5.1.1",
     "del": "^3.0.0",
-    "dredd": "^4.7.0",
+    "dredd": "^4.7.2",
     "esdoc": "^1.0.4",
     "esdoc-ecmascript-proposal-plugin": "1.0.0",
     "esdoc-flow-type-plugin": "1.0.1",
     "esdoc-standard-plugin": "^1.0.0",
-    "eslint": "^4.11.0",
+    "eslint": "^4.12.0",
     "eslint-config-vixo": "^2.0.1",
     "express": "^4.16.2",
     "flow": "^0.2.3",
