deps: Update dredd and pop-api-scraper

--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
     "horriblesubs-api": "^1.0.8",
     "inquirer": "^4.0.1",
     "kat-api-pt": "^3.0.0",
-    "mongoose": "^4.13.6",
+    "mongoose": "^4.13.7",
     "node-tvdb": "^3.2.0",
     "nyaa-api-pt": "^2.0.0",
     "omdb-api-pt": "^2.0.1",
     "p-map": "^1.2.0",
     "p-times": "^1.0.1",
     "parse-torrent": "^5.8.3",
-    "pop-api": "^0.2.0",
-    "pop-api-scraper": "git+https://github.com/ChrisAlderson/pop-api-scraper.git#development",
+    "pop-api": "file:../pop-api/pop-api-0.2.0.tgz",
+    "pop-api-scraper": "git+https://github.com/ChrisAlderson/pop-api-scraper.git",
     "tmdbapi": "^1.0.2",
     "trakt.tv": "^6.0.2",
     "webtorrent-health": "^1.1.1",
@@ -40,42 +40,43 @@
     "coveralls": "^3.0.0",
     "cross-env": "^5.1.1",
     "del": "^3.0.0",
-    "dredd": "^4.8.0",
+    "dredd": "^4.9.1",
     "esdoc": "^1.0.4",
     "esdoc-ecmascript-proposal-plugin": "1.0.0",
     "esdoc-flow-type-plugin": "1.0.1",
     "esdoc-standard-plugin": "^1.0.0",
-    "eslint": "^4.12.1",
+    "eslint": "^4.13.1",
     "eslint-config-vixo": "^2.0.1",
     "express": "^4.16.2",
     "flow": "^0.2.3",
-    "flow-bin": "^0.60.1",
+    "flow-bin": "^0.61.0",
     "flow-typed": "^2.2.3",
     "forever": "^0.15.3",
     "husky": "^0.14.3",
     "mkdirp": "^0.5.1",
     "mocha": "^4.0.1",
     "nyc": "^11.4.0",
-    "sinon": "^4.1.2"
+    "sinon": "^4.1.3"
   },
   "license": "MIT",
   "scripts": {
-    "build": "./node_modules/.bin/babel src --out-dir build",
-    "coveralls": "cat ./coverage/lcov.info | node ./node_modules/.bin/coveralls",
-    "debug": "cross-evn NODE_ENV=development DEBUG=popcorn-api:* node --require babel-register --inspect-brk=http://localhost:9229 ./src/index.js -m pretty",
-    "dev": "cross-env NODE_ENV=development ./node_modules/.bin/babel-node ./src/index.js -m pretty",
-    "docs": "./node_modules/.bin/esdoc -c .esdoc.json",
-    "flow": "./node_modules/.bin/flow",
-    "forever": "cross-env NODE_ENV=production ./node_modules/.bin/forever start ./build/index.js -m pretty",
-    "lint": "./node_modules/.bin/eslint {src,test}/** ./*.js",
+    "build": "babel src --out-dir build",
+    "coveralls": "cat ./coverage/lcov.info | coveralls",
+    "debug": "npm rundev --inspect-brk",
+    "dev": "cross-env NODE_ENV=development DEBUG=popcorn-api:* node --require babel-register ./src/index.js",
+    "docs": "esdoc -c .esdoc.json",
+    "flow": "flow",
+    "flow-typed": "flow-typed install",
+    "forever": "cross-env NODE_ENV=production forever start ./build/index.js -m pretty",
+    "lint": "eslint {src,test}/** ./*.js",
     "precommit": "npm run lint && npm run flow",
     "prepush": "npm run test",
     "pretest": "npm run build",
-    "providers": "./node_modules/.bin/babel-node ./src/index.js --providers",
+    "providers": "babel-node ./src/index.js --providers",
     "start": "cross-env NODE_ENV=production node ./build/index.js -m pretty",
     "test": "npm run test-dredd && npm run test-mocha",
-    "test-dredd": "cross-env NODE_ENV=test ./node_modules/.bin/babel-node ./node_modules/dredd/bin/dredd",
-    "test-mocha": "cross-env NODE_ENV=test ./node_modules/.bin/nyc --reporter=lcov --reporter=text ./node_modules/.bin/mocha --recursive --exit --timeout 10000 --reporter spec test/**"
+    "test-dredd": "cross-env NODE_ENV=test babel-node dredd",
+    "test-mocha": "cross-env NODE_ENV=test nyc -r=lcov -r=text mocha --recursive --exit --timeout 10000"
   },
   "bin": {
     "popcorn-api": "./build/index.js"
