--- a/.babelrc
+++ b/.babelrc
@@ -1,22 +1,49 @@
 {
-  "presets": [
-    ["env", {
-      "targets": {
-        "node": "7.10.1"
-      }
-    }],
-    "flow"
-  ],
-  "env": {
-    "test": {
-      "plugins": ["istanbul"]
-    }
-  },
   "plugins": [
-    "dynamic-import-node",
     "transform-class-properties",
     "transform-export-extensions",
-    "transform-object-rest-spread",
+    ["transform-object-rest-spread", {
+      "useBuiltIns": true
+    }],
     "transform-strict-mode"
-  ]
+  ],
+  "presets": ["flow"],
+  "env": {
+    "development": {
+      "presets": [
+        ["env", {
+          "targets": {
+            "node": "7.10.1"
+          }
+        }]
+      ]
+    },
+    "production": {
+      "plugins": [
+        "external-helpers",
+        "transform-class-properties"
+      ],
+      "presets": [
+        ["env", {
+          "targets": {
+            "node": "7.10.1"
+          },
+          "modules": false
+        }]
+      ]
+    },
+    "test": {
+      "plugins": [
+        "istanbul",
+        "transform-class-properties"
+      ],
+      "presets": [
+        ["env", {
+          "targets": {
+            "node": "7.10.1"
+          }
+        }]
+      ]
+    }
+  }
 }
