--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "parse-torrent": "^5.8.3",
     "pop-api": "^0.5.0",
     "pop-api-scraper": "git+https://github.com/ChrisAlderson/pop-api-scraper.git",
+    "rollup": "^0.53.0",
+    "rollup-plugin-babel": "^3.0.3",
+    "rollup-plugin-json": "^2.3.0",
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-uglify": "^2.0.1",
     "tmdbapi": "^1.0.2",
     "trakt.tv": "^6.0.2",
     "webtorrent-health": "^1.1.1",
@@ -26,7 +31,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-plugin-dynamic-import-node": "^1.2.0",
+    "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-istanbul": "^4.1.5",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-export-extensions": "^6.22.0",
@@ -56,11 +61,12 @@
     "mkdirp": "^0.5.1",
     "mocha": "^4.0.1",
     "nyc": "^11.4.1",
-    "sinon": "^4.1.3"
+    "sinon": "^4.1.3",
+    "uglify-es": "^3.3.2"
   },
   "license": "MIT",
   "scripts": {
-    "build": "babel src --out-dir build",
+    "build": "cross-env NODE_ENV=production rollup -c",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
     "debug": "npm run dev --inspect-brk",
     "dev": "cross-env NODE_ENV=development node --require babel-register ./src/index.js",
@@ -79,14 +85,18 @@
     "test-mocha": "nyc -r=lcov -r=text mocha --recursive --exit --timeout 10000"
   },
   "bin": {
-    "popcorn-api": "./build/index.js"
+    "popcorn-api": "./build/popcorn-api.js"
   },
   "engines": {
     "node": ">=7.10.1"
   },
-  "main": "./build/index.js",
+  "main": "./build/popcorn-api.js",
+  "module": "./build/popcorn-api.esm.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/popcorn-official/popcorn-api.git"
-  }
+  },
+  "files": [
+    "./build/**"
+  ]
 }
