feat: Add support for standard-version

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "rollup-plugin-json": "^2.3.0",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-uglify": "^2.0.1",
+    "standard-version": "^4.2.0",
     "tmdbapi": "^1.0.2",
     "trakt.tv": "^6.0.2",
     "webtorrent-health": "^1.1.1",
@@ -75,7 +76,9 @@
     "flow-typed": "flow-typed install",
     "forever": "cross-env NODE_ENV=production forever start ./build/index.js -m pretty",
     "lint": "eslint {src,test}/** ./*.js",
+    "release": "standard-version",
     "precommit": "npm run lint && npm run flow",
+    "prerelease": "npm run build",
     "prepush": "npm run test",
     "pretest": "npm run build",
     "providers": "babel-node ./src/index.js --providers",
